# AutomatedInvoiceandServiceTracker

./: .gitignore  DASHBOARDS.md  README.md
backend/: .env.example  README.md  alembic.ini  pyproject.toml
backend/alembic/: env.py
backend/alembic/versions/: 20260608_0001_initial_schema.py
backend/app/: main.py
backend/app/api/: deps.py
backend/app/api/v1/: admin.py  auth.py  clients.py  invoices.py  router.py  services.py  users.py
backend/app/core/: config.py  security.py
backend/app/models/: __init__.py  client.py  invoice.py  service.py  user.py
backend/app/schemas/: client.py  invoice.py  service.py  user.py
backend/app/services/: billing.py  mailer.py
backend/app/tasks/: scheduler.py
backend/scripts/: seed_demo_data.py
backend/tests/: conftest.py  test_automation.py  test_calculation.py  test_security.py
frontend/: README.md  index.html  package-lock.json  package.json
frontend/src/: App.jsx  styles.css
frontend/src/api/: axiosClient.js
frontend/src/auth/: AuthContext.jsx
frontend/src/components/: DashboardCard.jsx  TopBar.jsx
frontend/src/pages/: AdminDashboard.jsx  AdminPage.jsx  ClientDashboard.jsx  ClientPage.jsx  FinanceDashboard.jsx  FinancePage.jsx  LoginPage.jsx  UnauthorizedPage.jsx
frontend/src/routes/: ProtectedRoute.jsx
