[project]
name = "automated-invoice-service-backend"
version = "0.1.0"
description = "FastAPI backend for Automated Invoice & Service Tracker"
requires-python = ">=3.11"
dependencies = [
  "fastapi>=0.115.0",
  "uvicorn[standard]>=0.30.0",
  "sqlalchemy>=2.0.31",
  "psycopg2-binary>=2.9.9",
  "alembic>=1.13.2",
  "python-jose[cryptography]>=3.3.0",
  "passlib[bcrypt]>=1.7.4",
  "bcrypt<5",
  "pydantic-settings>=2.3.4",
  "python-multipart>=0.0.9",
  "apscheduler>=3.10.4",
  "email-validator>=2.2.0",
  "pytest>=8.2.2",
  "pytest-asyncio>=0.23.8",
  "httpx>=0.27.0"
]

[tool.pytest.ini_options]
pythonpath = ["."]
asyncio_mode = "auto"
